module8/resources/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-server
  name: http-server
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: http-server
  topologyKeys:
    - "kubernetes.io/hostname"
    - "topology.kubernetes.io/zone"
    - "topology.kubernetes.io/region"
    - "*"
